# Multimodal-LLM-Project

./: .gitignore  README.md  pyproject.toml
scripts/: run_gpu.sh  run_gpu_eval.sh  run_gpu_train.sh  run_main.sh  run_metrics.sh
src/: data_processing.py  evaluation.py  get_metrics.py  load_data.py  main.py  prompts.py  train.py
